--- a/src/components/test.css
+++ b/src/components/test.css
@@ -9,4 +9,6 @@
   left: 0px;
   transition-timing-function: ease-in-out;
   transition-duration: 500ms;
+  width: 100%;
+  background-color: blue;
 }
