admin routes working, only an admin can add products

--- a/src/components/test.css
+++ b/src/components/test.css
@@ -1,4 +1,4 @@
-#test {
+/* #test {
   transition-timing-function: ease-in-out;
   transition-duration: 500ms;
 
@@ -11,4 +11,4 @@
   transition-duration: 500ms;
   width: 100%;
   background-color: blue;
-}
+} */
