--- a/src/style/NavTest.css
+++ b/src/style/NavTest.css
@@ -9,7 +9,7 @@ body{
    display: flex;
    justify-content: start;
    align-items: center;
-   width: 100vw;
+   width: 100%;
    overflow: auto;
 }
 
