--- a/src/style/ProductCard.css
+++ b/src/style/ProductCard.css
@@ -1,24 +1,25 @@
 
 
  
- .App{
+ /* .App{
    display: grid;
    grid-template-columns: 350px 350px 350px;
    justify-content: center;
- }
+ } */
  
- .prodList{
+ .allProductsPage{
    display: flex;
-   justify-content: space-evenly;
-   margin-top: 5rem;
+   justify-content: space-around;
+   width: 90%;
  }
  
  .prodCard {
    position: relative;
    background-color: rgb(248, 248, 248);
-   margin: 1rem;
-   flex: 1 0 25rem;
-   min-width: 30rem;
+   margin: 1rem 0;
+   flex: 1 0 1;
+   flex-wrap: wrap;
+   width: 250px;
    max-height: 50rem;
    transition: 0.2s;
    border-radius: 15px;
@@ -81,3 +82,15 @@
  
  /* the end of the code from card vid Alex */
  
+ /* Desktop, Tablet, Mobile */
+ @media (max-width: 1000px) {
+  .allProductsPage{
+    background-color: orangered;
+  }
+ }
+
+ @media (max-width: 640px) {
+  .allProductsPage{
+    flex-direction: column;
+  }
+ }
