--- a/src/style/NavTest.css
+++ b/src/style/NavTest.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navbar {
-  background-color: beige;
+  background-color: green;
   height: 80px;
   display: flex;
   justify-content: start;
@@ -20,7 +20,7 @@ body {
 }
 
 .nav-menu {
-  background-color: beige;
+  background-color: green;
   width: 250px;
   height: 100vh;
   display: flex;
@@ -67,7 +67,7 @@ body {
 }
 
 .navbar-toggle {
-  background-color: beige;
+  background-color: green;
   width: 100%;
   height: 80px;
   display: flex;
