--- a/src/style/NavTest.css
+++ b/src/style/NavTest.css
@@ -4,8 +4,8 @@ body {
 }
 
 .navbar {
-  background-color: green;
-  height: 80px;
+  background-color: black;
+  height: 70px;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -20,7 +20,7 @@ body {
 }
 
 .nav-menu {
-  background-color: green;
+  background-color: black;
   width: 250px;
   height: 100vh;
   display: flex;
@@ -48,7 +48,7 @@ body {
 
 .nav-text a {
   text-decoration: none;
-  color: black;
+  color: whitesmoke;
   font-size: 18px;
   width: 95%;
   height: 100%;
@@ -59,7 +59,7 @@ body {
 }
 
 .nav-text a:hover {
-  background-color: blueviolet;
+  background-color: rgb(52, 50, 50);
 }
 
 .nav-menu-items {
@@ -67,7 +67,7 @@ body {
 }
 
 .navbar-toggle {
-  background-color: green;
+  background-color: black;
   width: 100%;
   height: 80px;
   display: flex;
@@ -78,3 +78,18 @@ body {
 span {
   margin-left: 16px;
 }
+
+/* 
+.IconBag{
+
+}
+
+
+.IconPerson{
+  
+}
+
+.IconLogOut{
+ 
+  
+} */
