--- a/src/style/ProdCard3.css
+++ b/src/style/ProdCard3.css
@@ -20,9 +20,13 @@
 }
 
 .prodPriceText {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: rgb(136, 131, 131);
-  word-spacing: 9px;
+  /* word-spacing: 10px; */
+  display: flex;
+  justify-content: center;
+  letter-spacing: 1px;
+  
 }
 
 .cardBody {
