styling of pages

--- a/src/style/NavTest.css
+++ b/src/style/NavTest.css
@@ -124,7 +124,33 @@ span {
   color: rgb(157, 22, 215);
   /* font-weight: 600; */
   margin-right: 1160px;
-  font-size: 240%;
+  font-size: 230%;
   text-decoration: none;
   background-color: black;
+  text-decoration: none;
+
 }
+
+.YouLogoLink {
+  color: rgb(196, 46, 196);
+  font-size: 16px;
+  text-align: left;
+  text-decoration: none;
+}
+
+/* .YouLogoLink:hover{
+  color: whitesmoke;
+} */
+
+@media (max-width: 640px) {
+  .YouLogo {
+    margin-right: 400px;
+  }
+}
+
+/* @media (max-width: 375px) {
+  .YouLogo {
+    margin-left: 400px;
+    max-width: 100px;
+  }
+} */
