--- a/src/style/RenderWishlist.css
+++ b/src/style/RenderWishlist.css
@@ -5,5 +5,20 @@
 }
 
 .cardplacement{
+    margin-top: 20px;
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+    grid-gap:10px;
+    text-align: center;
+}
+
+.pic {
+    max-height: 200px;
+    margin-bottom: 10px;
+}
+.container {
+    text-align: center;
+    
 }
