--- a/src/style/NavTest.css
+++ b/src/style/NavTest.css
@@ -154,3 +154,14 @@ span {
     max-width: 100px;
   }
 } */
+
+
+.carth3{
+  color: rgb(123, 39, 123);
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.colorButton{
+  color: rgb(123, 39, 123);
+}
