--- a/src/style/RenderWishlist.css
+++ b/src/style/RenderWishlist.css
@@ -29,3 +29,7 @@
     grid-template-columns: repeat(auto-fit, minmax( 200px, 1fr));
     grid-gap:3em;
  }
+
+ .backgroundControl{
+    background-color: #f8f9f9;
+ }
