--- a/src/style/ProdCard3.css
+++ b/src/style/ProdCard3.css
@@ -12,7 +12,7 @@
 }
 
 .ProdName {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .prodBrandText {
@@ -35,6 +35,8 @@
   line-height: 0.7;
   /* white-space: nowrap; */
   text-align: center;
+  text-transform: uppercase ;
+  
   
 }
 
