--- a/src/style/SingleProdPage.css
+++ b/src/style/SingleProdPage.css
@@ -62,6 +62,7 @@
 .box p{
    line-height: 1.5;
    margin: 15px 0;
+   
 }
 
 .box .row h3{
@@ -77,4 +78,14 @@
    .thumb img{
       width: 50px;
    }
+}
+
+.textControling{
+  font-size: 14px;
+  
+}
+
+.textControlin2{
+   font-size: 14px;
+   word-spacing: 10px;
 }
